# osdev5

./: Cargo.toml  Makefile  build.sh  gdb.sh  qemu.sh
address/: Cargo.toml
address/src/: lib.rs  phys.rs  virt.rs
error/src/: lib.rs
etc/: aarch64-orangepi3.json  aarch64-orangepi3.ld  aarch64-osdev5.json  aarch64-osdev5.ld  aarch64-qemu.json  aarch64-qemu.ld  aarch64-rpi3.json  aarch64-rpi3.ld  common.sh  gdbrc  x86_64-none.grub  x86_64-none.json  x86_64-none.ld  x86_64-osdev5.json
etc/initrd/: passwd  shadow
fs/fat32/: Cargo.toml
fs/fat32/src/: data.rs  dir.rs  file.rs  lib.rs
fs/macros/: Cargo.toml
fs/macros/src/: lib.rs
fs/memfs/: Cargo.toml
fs/memfs/src/: block.rs  bvec.rs  dir.rs  file.rs  lib.rs  tar.rs
fs/memfs/test/: test1.tar
fs/vfs/: Cargo.toml
fs/vfs/src/: block.rs  char.rs  file.rs  fs.rs  ioctx.rs  lib.rs  node.rs  stat.rs  util.rs
init/src/: main.rs
kernel/: Cargo.toml  build.rs
kernel/macros/: Cargo.toml
kernel/macros/src/: lib.rs
kernel/src/: config.rs  debug.rs  font.rs  init.rs  main.rs  sync.rs  syscall.rs  util.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: asm.rs  context.S  context.rs  cpu.rs  exception.rs  intrin.rs  mod.rs  smp.rs  table.rs  timer.rs  vectors.S
kernel/src/arch/aarch64/boot/: entry.S  macros.S  mod.rs  uboot.S  upper.S
kernel/src/arch/aarch64/irq/: mod.rs
kernel/src/arch/aarch64/irq/gic/: gicc.rs  gicd.rs  mod.rs
kernel/src/arch/aarch64/mach_orangepi3/: gpio.rs  mod.rs  rtc.rs  uart.rs  wdog.rs
kernel/src/arch/aarch64/mach_qemu/: mod.rs
kernel/src/arch/aarch64/mach_rpi3/: emmc.rs  irqchip.rs  mailbox.rs  mod.rs  uart.rs
kernel/src/arch/aarch64/reg/: cntkctl_el1.rs  cpacr_el1.rs  mod.rs
kernel/src/arch/aarch64/virt/: fixed.rs  mod.rs  table.rs
kernel/src/arch/x86_64/: context.S  context.rs  exception.rs  gdt.rs  idt.S  idt.rs  intc.rs  intrin.rs  io.rs  irq_vectors.S  mod.rs  syscall.S  syscall.rs  timer.rs  uart.rs
kernel/src/arch/x86_64/boot/: entry.S  macros.S  mod.rs  upper.S
kernel/src/arch/x86_64/reg/: mod.rs  msr_ia32_efer.rs
kernel/src/arch/x86_64/virt/: fixed.rs  mod.rs  table.rs
kernel/src/dev/: display.rs  fdt.rs  gpio.rs  irq.rs  mod.rs  pseudo.rs  sd.rs  timer.rs  tty.rs
kernel/src/dev/pci/: mod.rs
kernel/src/dev/pci/pcie/: gpex.rs  mod.rs
kernel/src/dev/rtc/: mod.rs  pl031.rs
kernel/src/dev/serial/: mod.rs  pl011.rs
kernel/src/fs/: devfs.rs  mod.rs  sysfs.rs
kernel/src/mem/: heap.rs  mod.rs
kernel/src/mem/phys/: manager.rs  mod.rs  reserved.rs
kernel/src/mem/virt/: fixed.rs  mod.rs  table.rs
kernel/src/proc/: elf.rs  io.rs  mod.rs  process.rs  sched.rs  thread.rs  wait.rs
kernel/src/syscall/: arg.rs  mod.rs
libcommon/: Cargo.toml
libcommon/src/: lib.rs
libsys/: Cargo.toml
libsys/src/: abi.rs  calls.rs  debug.rs  error.rs  ioctl.rs  lib.rs  mem.rs  path.rs  proc.rs  signal.rs  stat.rs  termios.rs  traits.rs
libusr/: Cargo.toml
libusr/src/: allocator.rs  env.rs  file.rs  io.rs  lib.rs  mem.rs  os.rs  signal.rs  sync.rs  sys.rs  thread.rs
libusr/src/arch/: aarch64.rs  mod.rs  x86_64.rs
libusr/src/env/: mod.rs  passwd.rs  shadow.rs
libusr/src/io/: error.rs  mod.rs  stdio.rs  writer.rs
libusr/src/sys/: calls.rs  mod.rs
syscall/: Cargo.toml
syscall/src/: abi.rs  calls.rs  error.rs  ioctl.rs  lib.rs  signal.rs  stat.rs  termios.rs
user/: Cargo.toml
user/src/fuzzy/: main.rs
user/src/init/: main.rs
user/src/ls/: main.rs
user/src/sbin/: login.rs
user/src/shell/: main.rs
