[package]
name = "osdev5"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "fs/vfs",
    "fs/memfs",
    "fs/fat32",
    "libcommon",
    "kernel",
    "libusr",
    "init",
    "error"
]
