[package]
name = "osdev5"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "fs/fat32",
    "fs/macros",
    "fs/memfs",
    "fs/vfs",
    "kernel",
    "kernel/macros",
    "libsys",
    "libusr",
    "user",
]
