[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kernel"
test = false

[dependencies]
vfs = { path = "../fs/vfs" }
memfs = { path = "../fs/memfs" }
libsys = { path = "../libsys" }
cfg-if = "1.x.x"
tock-registers = "0.7.x"
bitflags = "^1.3.0"
kernel-macros = { path = "macros" }
fs-macros = { path = "../fs/macros" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
multiboot2 = { git = "https://github.com/alnyan/multiboot2", branch = "expose-extra-traits-for-iters" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
cortex-a = { version = "7.0.x" }
fdt-rs = { version = "0.x.x", default-features = false }

[features]
default = ["aggressive_syscall"]
pl011 = []
pl031 = []
verbose = []
aggressive_syscall = []

mach_qemu = ["pl011", "pl031"]
mach_orangepi3 = []
mach_rpi3 = ["pl011"]
