[package]
name = "user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "init"
path = "src/init/main.rs"

[[bin]]
name = "shell"
path = "src/shell/main.rs"

[[bin]]
name = "fuzzy"
path = "src/fuzzy/main.rs"

[[bin]]
name = "ls"
path = "src/ls/main.rs"

[[bin]]
name = "login"
path = "src/login/main.rs"

[dependencies]
libusr = { path = "../libusr" }
libsys = { path = "../libsys" }
lazy_static = { version = "*", features = ["spin_no_std"] }
