[package]
name = "memfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vfs = { path = "../vfs" }
fs-macros = { path = "../macros" }
libsys = { path = "../../libsys" }

[features]
cow = []
default = ["cow"]
